--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <header>
         <img src="Jayden.jpg" alt="Picture of Jayden" class="header-pic">
     <div class="links-container">
-        <h1>LINK 1</h1>
-        <h1>LINK 2</h1>
-        <h1>LINK 3</h1>
+        <a href="https://docs.google.com/spreadsheets/d/1EZgFsTxlxKBTYPfucOWh7lI13zwrnV-PCshLZYV2yRo/edit?gid=0#gid=0" target="_blank" class="link1">Link1 </a>
+        <a href="https://docs.google.com/document/d/1-1b1Y7b3bX4k2v5X1F6vZ3H9K8J7L6M5N4O3P2Q1R0S/edit" target="_blank" class="link2">Link2 </a>
+        <a href="https://www.wikipedia.org/" target="_blank" class="link3">Link3 </a>
     </div>
     </header>
-    <h1 class="start of paragraph">Title</h1>
-    sdkfjslidjfsijaasdfakdlfjas;lijioojiiojoijiiljlljllkjjlkf;<br>sjdkfjslijfslisjljlsdjfa;ljfsdkjfalsdkfsdfadsfjiodjs;flaisjdfdjfsiejfisejfa<br>
+    <h1 class="startfparagraph">Title</h1>
+    <p class="paragraph1">sdfjsiejfisejflsjflksjdlkfj<br>sdkfjslekjfsiejfoisdjflisjefoisjofijsdlfjsejfoisjeoifjsldijf<br>sjoeijfoisejflsjeflisjeoifjsdofs</p>
     <hr class="line1">
     <img src="picachu.jpg" alt="pikachu" class="pikachu-pic">
     <div class="blue-box">
