--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
         <a href="https://www.wikipedia.org/" target="_blank" class="link3">Link3 </a>
     </div>
     </header>
-    <h1 class="startfparagraph">Title</h1>
+    <h1 class="startfparagraph">Eason is gay</h1>
     <p class="paragraph1">sdfjsiejfisejflsjflksjdlkfj<br>sdkfjslekjfsiejfoisdjflisjefoisjofijsdlfjsejfoisjeoifjsldijf<br>sjoeijfoisejflsjeflisjeoifjsdofs</p>
     <hr class="line1">
     <img src="picachu.jpg" alt="pikachu" class="pikachu-pic">
     <div class="blue-box">
         <h2 class="blue-box-text">iajsldifjasoijfoisajfaefsefjase<br>sldijfosiejflksjdfkjz<br>sdilfjlsejdfsjdfasdlfalsdfij;s</h2>
         <h1 class="button1">BUTTON 1</h1>
+        <img src="leon.jpg" alt="leon" class="leon-pic">
     </div>
+
+    
     </body>
 
 </html>
